--- a/bus_details.html
+++ b/bus_details.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/aos.css">
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/Bus.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
@@ -331,51 +332,95 @@
       </div>
     </div>
 
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="mb-5">
-              <h3 class="footer-heading mb-4">About Travelers</h3>
-              <p>Provides student a pass for their daily life to travel to/from GLA University, Mathura</p>
-            </div>
-
-
-
-          </div>
-          <div class="col-lg-4 mb-5 mb-lg-0" style="margin-left: auto;">
-            <div class="row mb-5">
-              <div class="col-md-12">
-                <h3 class="footer-heading mb-4">Navigations</h3>
-              </div>
-              <div class="col-md-6 col-lg-6">
-                <ul class="list-unstyled">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Contact Us</a></li>
-                </ul>
-              </div>
-
-            </div>
-
-
-
-          </div>
-
-
-        </div>
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved
-            </p>
-          </div>
-
-        </div>
-      </div>
-    </footer>
   </div>
+  <!-- Footer -->
+  <footer class="page-footer font-small stylish-color-dark pt-4">
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left py-4">
+
+      <!-- Grid row -->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-md-6 mx-auto">
+
+          <!-- Content -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
+          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
+            amet,
+            consectetur
+            adipisicing elit.</p>
+
+        </div>
+        <!-- Grid column -->
+        <div class="col-md-2 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Places</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="bus_details.html"> Delhi</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Agra</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Mathura</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Vrindavan</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Barsana</a>
+            </li>
+            <li>
+              <a href="bus_details.html">Chaumuhan</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Grid column -->
+        <div class="col-md-2 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Navigations</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <i class="fa fa-home"> </i><a href="index.html"> Home</a>
+            </li>
+            <li>
+              <i class="fa fa-bus"> </i><a href="about.html"> About</a>
+            </li>
+            <li>
+              <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
+            </li>
+            <li>
+              <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
+            </li>
+            <li>
+              <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+
+
+    <div class="footer-copyright text-center py-3">
+      <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
+    </div>
+  </footer>
+  <!-- Footer -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
