--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/Bus.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 
@@ -45,14 +46,15 @@
     </div>
 
 
-    <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top"
+      style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 10px;"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      </nav>
+    </nav>
     <!-- <header class="site-navbar py-1" role="banner">
 
       <div class="container">
@@ -81,9 +83,9 @@
 
     </header> -->
 
-    <div class="site-blocks-cover inner-page-cover head" style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; "
-    data-aos="fade"
-      data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover inner-page-cover head"
+      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; "
+      data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container content">
         <div class="row align-items-center justify-content-center text-center ">
 
@@ -91,9 +93,9 @@
             <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">ABOUT</h1>
             <div style="font-size: 17px; font-weight: 500;">
               <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
-              <span class="mx-2 text-white" >&bullet;</span>
+              <span class="mx-2 text-white">&bullet;</span>
               <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
-              <span class="mx-2 text-white"  >&bullet;</span>
+              <span class="mx-2 text-white">&bullet;</span>
               <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
             </div>
 
@@ -101,7 +103,7 @@
         </div>
       </div>
 
-      
+
     </div>
 
 
@@ -110,7 +112,8 @@
       <div class="container about">
         <div class="row align-items-center">
           <div class="col-md-6 mb-5 mb-md-0">
-            <img src="images/test.jpg" alt="Image" class="img-fluid rounded" style="filter: contrast(80%); height: 300px; width: 500px;">
+            <img src="images/test.jpg" alt="Image" class="img-fluid rounded"
+              style="filter: contrast(80%); height: 300px; width: 500px;">
           </div>
           <div class="col-md-6 pl-md-5">
             <h2 class="font-weight-light text-black mb-4">Bus Pass System</h2>
@@ -129,66 +132,113 @@
       </div>
     </div>
 
-    
 
 
 
-  <div class="site-section border-top">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-          <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+
+    <div class="site-section border-top">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-12">
+            <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
+            <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+          </div>
         </div>
       </div>
     </div>
+
   </div>
 
-  <footer class="site-footer">
-    <div class="container">
+  <!-- Footer -->
+  <footer class="page-footer font-small stylish-color-dark pt-4">
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left py-4">
+
+      <!-- Grid row -->
       <div class="row">
-        <div class="col-lg-4">
-          <div class="mb-5">
-            <h3 class="footer-heading mb-4">About Travelers</h3>
-            <p>Provides student a pass for their daily life to travel to/from GLA University, Mathura</p>
-          </div>
 
+        <!-- Grid column -->
+        <div class="col-md-6 mx-auto">
 
-
-        </div>
-        <div class="col-lg-4 mb-5 mb-lg-0" style="margin-left: auto;">
-          <div class="row mb-5">
-            <div class="col-md-12">
-              <h3 class="footer-heading mb-4">Navigations</h3>
-            </div>
-            <div class="col-md-6 col-lg-6">
-              <ul class="list-unstyled">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-
-          </div>
-
-
+          <!-- Content -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
+          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
+            amet,
+            consectetur
+            adipisicing elit.</p>
 
         </div>
+        <!-- Grid column -->
+        <div class="col-md-2 mx-auto">
 
+          <!-- Links -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Places</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="bus_details.html"> Delhi</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Agra</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Mathura</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Vrindavan</a>
+            </li>
+            <li>
+              <a href="bus_details.html"> Barsana</a>
+            </li>
+            <li>
+              <a href="bus_details.html">Chaumuhan</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Grid column -->
+        <div class="col-md-2 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-white mt-3 mb-4">Navigations</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <i class="fa fa-home"> </i><a href="index.html"> Home</a>
+            </li>
+            <li>
+              <i class="fa fa-bus"> </i><a href="about.html"> About</a>
+            </li>
+            <li>
+              <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
+            </li>
+            <li>
+              <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
+            </li>
+            <li>
+              <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
 
       </div>
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <p>
-            Copyright &copy;
-            <script>document.write(new Date().getFullYear());</script> All rights reserved
-          </p>
-        </div>
+      <!-- Grid row -->
 
-      </div>
+    </div>
+    <!-- Footer Links -->
+
+
+
+    <div class="footer-copyright text-center py-3">
+      <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
     </div>
   </footer>
-  </div>
+  <!-- Footer -->
+
+
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
