--- a/bus_details.html
+++ b/bus_details.html
@@ -44,49 +44,37 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <header class="site-navbar py-1" role="banner">
+    <nav class="navbar navbar-light navbar-expand-xl fixed-top"
+      style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+          style="max-width: 70px; padding-left: 10px;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
 
-      <div class="container">
-        <div class="row align-items-center">
-
-          <div class="col-6 col-xl-2">
-            <a class="navbar-brand" href="#"><img
-                src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
-                border="0"></a>
-          </div>
-          <div class="col-10 col-md-8 d-none d-xl-block">
-            <nav class="site-navigation position-relative text-right" role="navigation">
-
-              <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="active">
-                  <a href="index.html">Home</a>
-                </li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="manage.php">Manage Pass</a></li>
-                <li><a href="bus_details.html">Bus Details</a></li>
-              </ul>
-            </nav>
-          </div>
-
-        </div>
-      </div>
-
-    </header>
-
-    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade"
-      data-stellar-background-ratio="0.5">
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
+    <div class="site-blocks-cover inner-page-cover head"
+      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; "
+      data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="container content">
+        <div class="row align-items-center justify-content-center text-center ">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white font-weight-light">Bus Details</h1>
-            <div><a href="index.html">Home</a> <span class="mx-2 text-white">&bullet;</span> <span
-                class="text-white">Bus Details</span></div>
+            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">ABOUT</h1>
+            <div style="font-size: 17px; font-weight: 500;">
+              <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
+              <span class="mx-2 text-white">&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+              <span class="mx-2 text-white">&bullet;</span>
+              <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+            </div>
 
           </div>
         </div>
       </div>
+
+
     </div>
 
 
