--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/Bus.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 </head>
@@ -83,20 +84,20 @@
 
     </header> -->
 
-    <div class="site-blocks-cover inner-page-cover head"
-      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; "
+    <div class="site-blocks-cover inner-page-cover"
+      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px;"
       data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container content">
-        <div class="row align-items-center justify-content-center text-center ">
+        <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             <h1 class="text-white" style=" font-weight: 500; font-size: 80px;">ABOUT</h1>
             <div style="font-size: 17px; font-weight: 500;">
               <a href="index.html" style="color: rgb(236, 234, 234);">Home</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="index.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
+              <a href="Form.html" style="color: rgb(236, 234, 234);">Manage Pass</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="index.html" style="color: rgb(236, 234, 234);">Bus Details</a>
+              <a href="bus_details.html" style="color: rgb(236, 234, 234);">Bus Details</a>
             </div>
 
           </div>
@@ -109,11 +110,11 @@
 
 
     <div class="site-section" data-aos="fade-up">
-      <div class="container about">
+      <div class="container about ">
         <div class="row align-items-center">
           <div class="col-md-6 mb-5 mb-md-0">
             <img src="images/test.jpg" alt="Image" class="img-fluid rounded"
-              style="filter: contrast(80%); height: 300px; width: 500px;">
+              style="filter: contrast(80%); height: 270px; width: 450px;">
           </div>
           <div class="col-md-6 pl-md-5">
             <h2 class="font-weight-light text-black mb-4">Bus Pass System</h2>
@@ -140,8 +141,9 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-12">
-            <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-            <p class="mb-0"><a href="book.php" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+            <h2 class="text-black" style="font-size: 20px;">Want To Travel With Us?</h2>
+            <hr class="hr-travel" data-aos="fade" data-aos-delay="200">
+            <p class="mb-0"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now!</a></p>
           </div>
         </div>
       </div>
@@ -233,7 +235,8 @@
 
 
     <div class="footer-copyright text-center py-3">
-      <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pas</a></p>
+      <p>Copyright © 2020 All Rights Reserved by <a href="#" style="text-decoration: none;">Bus Pass</a>
+      </p>
     </div>
   </footer>
   <!-- Footer -->
@@ -253,6 +256,9 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
 
 </body>
 
