--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 
     <div class="site-blocks-cover"
-        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px; opacity: 0.93;"
+        style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px;"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center main">
@@ -201,7 +201,8 @@
             <div class="row text-center book">
                 <div class="col-md-12">
                     <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-3 px-5 text-white">Book Now</a></p>
+                    <hr class="hr-travel" data-aos="fade" data-aos-delay="200">
+                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a></p>
                 </div>
             </div>
         </div>
@@ -345,7 +346,8 @@
 
 
         <div class="footer-copyright text-center py-3">
-            <p>Copyright © 2020 All Rights Reserved by <a href="#" target="_blank">Bus Pass</a></p>
+            <p>Copyright © 2020 All Rights Reserved by <a href="#">Bus
+                    Pass</a></p>
         </div>
     </footer>
     <!-- Footer -->
@@ -362,10 +364,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-
+    <script src="js/bus.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();</script>
-    <script src="js/bus.js"></script>
+
 </body>
 
 </html>
