--- a/bus_details.html
+++ b/bus_details.html
@@ -316,7 +316,7 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
-          <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
+          <h2 class="text-black" style="font-size: 20px;">Want To Travel With Us?</h2>
           <hr class="hr-travel" data-aos="fade" data-aos-delay="200">
           <p class="mb-0"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a></p>
         </div>
