--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
             <div class="row mb-5">
                 <div class="col-md-7">
                     <h1 class="heading margin-bottom: 80px" data-aos="fade-right">Our Destinations</h1>
-                    <hr data-aos="fade-right" data-aos-delay="500">
-                    <p class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right"
-                            src="images/travel.png" style="max-width: 90px;"></p>
+
+                    <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px;">
+                    <div class="subheading">Choose Your Next Destination <img class="ml-1 bus" data-aos="fade-right"
+                            src="images/travel.png" style="max-width: 90px;"></div>
                 </div>
             </div>
             <div class="row">
@@ -169,7 +170,7 @@
             <div class="row  mb-5">
                 <div class="col-md-7 " style="margin-bottom: 80px;">
                     <h1 class="heading" data-aos="fade-right">TEAM</h1>
-                    <hr data-aos="fade-right" data-aos-delay="500">
+                    <hr data-aos="fade-right" data-aos-delay="500" style="height: 1.5px; width: 40%">
                 </div>
             </div>
             <div class="container ">
@@ -200,9 +201,10 @@
         <div class="container">
             <div class="row text-center book">
                 <div class="col-md-12">
-                    <h2 class="mb-5 text-black">Want To Travel With Us?</h2>
-                    <hr class="hr-travel" data-aos="fade" data-aos-delay="200">
-                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a></p>
+                    <h2 class="text-black" style="font-size: 20px;">Want To Travel With Us?</h2>
+                    <hr class=" hr-travel" data-aos="fade" data-aos-delay="200">
+                    <p class="mb-5"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a>
+                    </p>
                 </div>
             </div>
         </div>
